--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -26,7 +26,7 @@
   .personabucket img { height:60px; width:60px; display:inline-block; }
   .personalabel .headerinfo { letter-spacing:2px; display:inline-block; font-size:20px; padding-bottom: 4px; width: 89%; ;bottom: 20px;position: relative;}
   .personalabel .headerinfo h3 {display:inline; margin-left:10px; }
-  .challengelabel .headerinfo { border:none;position:relative; bottom: 10px; margin-left:10px; }
+  .challengelabel .headerinfo { border:none;position:relative; bottom: 10px; margin-left:10px; letter-spacing:1px; }
   .challengelabel .headerinfo h3 {line-height:30px; }
   .personalabel .headerinfo h3 { position:relative; padding-right:10px; top:24px; left:0;}
   .headerinfo {  display:inline-block;  }
@@ -38,7 +38,7 @@
   .challengecontent > div { margin-bottom:40px; }
   .challengebucket {margin: 15px 24px 0 60px; padding: 12px;border: 1px solid rgba(0,0,0,.1);border-radius: 6px;background-color: #FCFCFC;}
   .challengebucket img { height:60px; width:60px; display:inline-block; border-radius:6px; vertical-align: baseline; }
-  .challengebucket h2 { color: rgb(196, 196, 196); text-shadow: 1px 0 0 #fff; font-weight:bold; font-size:35px; }
+  .challengebucket h2 { color: rgb(196, 196, 196); text-shadow: 1px 0 0 #fff; font-weight:bold; font-size:35px; letter-spacing:1px;}
   .challengebucket h4 { font-weight:bold; text-transform: uppercase; font-size: 14px;}
   .profilecontent { padding-bottom:8px;}
   .profilecontent .table { margin-bottom: 0; border: 1px solid rgba(0,0,0,.1); width:auto; box-shadow: 0 2px 4px rgba(0, 0, 0, .05); background-color:white; }
