--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -37,7 +37,7 @@
   .challengecontent > div { margin-bottom:40px; }
   .challengebucket { margin: 20px auto 20px auto; width: 600px; padding: 12px;border: 1px solid rgba(0,0,0,.1);border-radius: 6px;background-color: #FCFCFC;}
   .challengebucket img { height:60px; width:60px; display:inline-block; border-radius:6px; vertical-align: baseline; }
-  .challengebucket h2 { color: rgb(196, 196, 196); text-shadow: 1px 0 0 #fff; font-weight:bold; font-size:35px; letter-spacing:1px;}
+
   .challengebucket h4 { font-weight:bold; text-transform: uppercase; font-size: 14px;}
   .profilecontent { padding-bottom:8px;}
   .profilecontent .table { margin-bottom: 0; border: 1px solid rgba(0,0,0,.1); width:auto; box-shadow: 0 2px 4px rgba(0, 0, 0, .05); background-color:white; }
@@ -63,13 +63,23 @@
   .personalabel:hover {border-color: rgba(82, 168, 236, 0.8);outline: 0;outline: thin dotted 9;-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);}  
   .challengebucket .sub {font-size:14px;}
   
-  .profileheader { background-color: whitesmoke; padding: 10px; border: 1px solid rgba(0,0,0,.1);border-bottom: none;border-top-right-radius: 6px;border-top-left-radius: 6px;}
-  .profileheader img{ display:inline-block; }
-  .profileheader h3 { display:inline-block; }
-  .challengeselector { background-color:wheat; border: 1px solid rgba(0,0,0,.1);border-bottom-left-radius: 6px;}
+  .profileheader { background-image: -webkit-linear-gradient(top,white,rgb(243, 243, 243)); padding: 4px 10px 8px 10px; border: 1px solid rgba(0,0,0,.1);border-bottom: none;border-top-right-radius: 6px;border-top-left-radius: 6px;}
+  .profileheader img{ display:inline-block; width:35px; height:35px;  }
+  .profileheader > div { display: inline-block; }
+  .profileheader h3 { display:inline-block; font-size: 20px; text-transform: uppercase;top: 3px;left: 4px; position: relative;}
+  .challengeselector { background-color: #f9f9f9; border: 1px solid rgba(0,0,0,.1);border-bottom-left-radius: 6px; border-bottom:none; border-right:none; }
+  .challengeselector ul { list-style: none; margin:0;  }
+  .challengeselector li { font-size:15px; border-bottom:1px solid rgba(0,0,0,.1); padding: 7px 12px; cursor:pointer; }
+  .challengeselector li:last-child:hover { border-bottom-left-radius:6px; }
+  .challengeselector li:hover { background-image: -moz-linear-gradient(white, white 5%, #E6E6E6); background-image: -ms-linear-gradient(white, white 5%, #E6E6E6);  background-image: -o-linear-gradient(white, white 5%, #E6E6E6);  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), color-stop(0.05, white), to(#E6E6E6));  background-image: -webkit-linear-gradient(white, white 5%, #E6E6E6);  background-image: linear-gradient(white, white 5%, #E6E6E6);  color: rgb(75, 75, 75);  text-shadow: 0 1px 0px whitesmoke;  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6');  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6')";  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);    box-shadow: 0 1px 1px rgba(0,0,0,0.2);}
+  .challengeselector li:active { background-color: rgb(245, 245, 245);  background-image: none;  outline: 0;  -webkit-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  -moz-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);}
   #profile .span11 { margin:0; }
   #profile .span5 { width: 300px; }
-  .challengecontent {background-color: white; padding:12px;border: 1px solid rgba(0,0,0,.1);border-bottom-right-radius: 6px;border-bottom-left-radius: 6px; }
+  #profile .span5 .leftbox { width:288px; margin-top:12px; }
+  .challengecontent {background-color: #fcfcfc; padding: 12px 12px 12px 40px;border: 1px solid rgba(0,0,0,.1);border-bottom-right-radius: 6px;border-bottom-left-radius: 6px; }
+  .progresssection { float: right; margin-top: 12px;}
+  .progresssection .progress { display:inline-block; }
+  .challengecontent h2 { color: rgb(154, 195, 197); text-shadow: 1px 0 0 #fff; font-weight:bold; font-size:35px; letter-spacing:1px;}
   
 %div#profile
   %div#topsection
@@ -99,7 +109,8 @@
         %div
           %img{src:"http://www.placekitten.com/50/50"}
           %h3 Persona Name
-        %div.personaprogressbar          
+        %div.progresssection
+          %h4 Level 5
   %div.row
     %div.span5
       %div.challengeselector
@@ -108,6 +119,9 @@
           %li Challenge name
           %li Challenge name
           %li Challenge name
+      %div.leftbox
+        %div.leftboxheader Vital Stats
+        %div.leftboxfooter Stuff
     %div.span11
       %div.challengecontent
         %div.arenabucket
