--- a/app/views/sections/_edit_tasks.html.haml
+++ b/app/views/sections/_edit_tasks.html.haml
@@ -33,7 +33,7 @@
     );
   });
 
-= render "tasks/new_task_form", { new_task: new_task, display: display_new_task_form, section: section }
+= render "tasks/new_task_form", { display: display_new_task_form, section: section }
 %table.task_list.table{ style: "margin: 0 0 0 10px;" }
   - tasks.each do |t|
     - next if t.id.nil?
