--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -187,7 +187,14 @@
                 %fieldset{style: "display: inline-block; margin-right:28px; margin-bottom:150px; width:56%;"}
                   %legend Create a Task
                   %span.help-block What's the Task?
-                  = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Task...", style:"width:100%;")                
+                  = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Task...", style:"width:100%;")
+                  %div.control-group
+                    %div.controls{ style: "width: 350px;" }
+                      %p
+                        Tasks require proof of completion in the form of a URL or image.
+                    %label.control-label Source
+                    %div.controls
+                      = f.select :url_type, hash_to_array(Task::URL_TEMPLATE_NAMES)                
                   %span.error_message
                   %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
                 %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
@@ -195,9 +202,8 @@
                     %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
                     Tips:
                   %ul{style:"font-size:13px;"}
+                    %li If you select "Any valid website", users will also be given a chance to upload an image as proof they completed the task.
                     %li Tasks should serve as a path to improving at the section.
-                    %li Keep the tone informal but direct.
-                    %li Make sure you check for spelling and grammar.
                     %li 
                       You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published Task.
               %div.step2{ style: "display: none;" }
