--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -17,27 +17,32 @@
       %div.quizheader
         = image_tag @path.path_pic, style: "height:50px; width:50px;", alt: "#{@path.name}"
         %div{ style: "display:inline-block;" }
-          %span <strong>#{@path.name}:</strong> #{@section.name}</span>
+          %span
+            %strong= #{@path.name}:
+            = @section.name
+      
       %div{ style: "text-align:center;" }
-        = render "stored_resource", { :stored_resource => @stored_resource }
+        = render "stored_resource", { stored_resource: @stored_resource }
+      
       %div.CRquestionandresponsespace
         %div.CRquestionspace
-          - if @task.answer_type == Task::CREATIVE
+          - if @task.creative_response?
             %span.CRquestionheader Creative response:
-          - elsif @task.answer_type == Task::CHECKIN
+          - elsif @task.task?
             %span.CRquestionheader Task:
-          %br
-          %pre.CRquestion= @task.question
+          %p
+            %pre.CRquestion= @task.question
+          %p{ style: "vertical-align: bottom;" }= To prove you completed this task, you must retrieve a URL from #{Task::URL_TEMPLATE_NAMES[@task.url_type]}
+        
         %div.CRresponsespace{ style: "min-height: 175px;" }           
-          - if @task.answer_type == Task::CREATIVE
+          - if @task.creative_response?
             %span Your answer:
-            - if @task.answer_sub_type == Task::TEXT
+            - if @task.text?
               :javascript
-                $(function(){
-                  check_text_before_submit();
-                });
+                $(function(){ check_text_before_submit(); });
               %textarea{ name: "answer", id: "answer_input", rows: "7", autofocus: "autofocus" }
-            - elsif @task.answer_sub_type == Task::IMAGE
+            
+            - elsif @task.image?
               :javascript
                 $(function(){
                   check_image_before_submit();
@@ -55,8 +60,9 @@
                 %p{ style: "margin:4px; line-height:18px; font-size: 13px;"} or #{file_field_tag("obj")}
                 %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
                   %div#answer_preview{ style: "text-align: center; padding: 10px;" }
-                    = image_tag "/images/image_thumb.png", :style => "width: 125px;", :id => "image_placeholder", alt: "Image placeholder"
-            - elsif @task.answer_sub_type == Task::YOUTUBE
+                    = image_tag "/images/image_thumb.png", style: "width: 125px;", id: "image_placeholder", alt: "Image placeholder"
+            
+            - elsif @task.youtube?
               :javascript
                 $(function(){
                   check_youtube_before_submit();
@@ -76,17 +82,32 @@
                 %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px; position:relative; bottom:5px;" } Preview
                 %div#answer_preview_container{ style: "text-align: center;padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
                   %div#answer_preview
-                    = image_tag "/images/youtube_thumb.jpg", :size => "380x200", :id => "youtube_placeholder", alt: "YouTube placeholder"
-          - elsif @task.answer_type == Task::CHECKIN
-            %span{style:"font-size:16px;"} I have completed the Task stated here.
+                    = image_tag "/images/youtube_thumb.jpg", size: "380x200", id: "youtube_placeholder", alt: "YouTube placeholder"
+          
+          - elsif @task.task?
             :javascript
-              $(function(){ check_checkin_before_submit(); });
-            %div.input{ style: "margin: 10px 0 0 0; " }
-              %p 
-              %input#checkin{ type: "hidden", name: "answer", value: false }
-              %a#checkin_button.button.button-standard Confirm
+                $(function(){
+                  check_image_before_submit();
+                  $("#answer_preview_button").click(function(){
+                    var url = $("#answer_input").val();
+                    is_valid_image(url, function(valid){
+                      if(valid == true) { $("#image_placeholder").attr("src", url);
+                      } else { alert("Please provide a link to a valid image."); }
+                    });
+                  });
+                });
+            %div.input{ style: "margin-left: 0px;" }
+              %input#answer_input{ type: "text", name: "answer", style: "width: 300px;", placeholder: "Copy & paste link to proof URL here...", autofocus: "autofocus" }
+              %a#answer_preview_button.btn.secondary{style:"position:relative; bottom:5px;"} Preview
+              - if @task.image_allowed?
+                %p{ style: "margin:4px; line-height:18px; font-size: 13px;"} Upload an optional #{file_field_tag("obj")}
+              %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
+                %div#answer_preview{ style: "text-align: center; padding: 10px;" }
+                  = image_tag "/images/image_thumb.png", style: "width: 125px;", id: "image_placeholder", alt: "Image placeholder"
+          - else
+            - raise "Fatal: Invalid answer_type"
       %div.CRbuttonspace
         = link_to "Back", challenge_path(@section.path.permalink, completed: true), class: "button button-standard", style: "float: left;"
-        %a.arena_report_link{href:"#", style: "position:relative; top:8px; margin-left:10px; text-decoration:none;"} Report this question
-        = submit_tag "Submit", :class => "button button-actionable", :id => "submit_button", style: "float:right;"
+        %a.arena_report_link{ href:"#", style: "position:relative; top:8px; margin-left:10px; text-decoration:none;"} Report this question
+        = submit_tag "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
         = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/loading.gif", size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
