--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -195,7 +195,7 @@ code,pre{font:inherit;}
 .label.notice {font-size:13px; float:right; margin:2px 6px 0 0; background-color:#3A87AD}
 #CRprogressbar {width:632px; height: 40px; margin: 0 auto;}
 .CRquestionspace {width:40%; display:inline-block; padding-top:9px;}
-.CRquestionheader {font:bold 18px 'Muli', sans-serif;}
+.cr_question_header {font:bold 15px 'Muli', sans-serif;}
 .CRquestion {font-size:15px; padding: 0; margin: 10px 5px 0 0; word-break: normal; background-color: white; border: none; font: normal 18px 'Muli', sans-serif;} 
 .CRresponsespace {display:inline-block;background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:9px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'Muli', sans-serif;width:56.5%;}
 .CRresponsespace textarea {display:block; margin:6px 12px 12px 12px; width:94%;}
